# ecommerce_analytics

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT_URL.txt  Dockerfile  Dockerfile.dash  Makefile  README.md  cleanup-all-docker.ps1  docker-compose.yml  pyproject.toml  translate.py  validate_imports.py
.github/workflows/: ci.yml
infra/: Dockerfile  docker-compose.yml
scripts/: clean_olist_reviews.py  create_bigquery_tables.py  fix_ruff.py  generate_secret_key.py  import_olist_to_bigquery.py  test_bigquery_connection.py  test_bigquery_direct.py  test_bq_quick.py
src/ecommerce_analytics/: __init__.py
src/ecommerce_analytics/api/: auth.py  main.py  schemas.py
src/ecommerce_analytics/api/routes/: __init__.py  analytics.py  auth.py  forecast.py  recommendations.py
src/ecommerce_analytics/bigquery/: client.py
src/ecommerce_analytics/core/: bigquery_client.py  config.py  error_handler.py  exceptions.py  logger.py
src/ecommerce_analytics/dashboard/: app.py
src/ecommerce_analytics/services/: analytics_service.py  forecast_service.py  ml_service.py
tests/: __init__.py  conftest.py
tests/integration/: test_analytics_endpoints.py  test_api.py  test_forecast_endpoints.py  test_recommendations_endpoints.py
tests/unit/: test_auth.py  test_config.py
