[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "ecommerce-analytics"
version = "1.0.0"
description = "Production-ready E-commerce Analytics Platform with BigQuery, FastAPI, and Plotly Dash"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Henrique Botelho Gomes", email = "henriquebotelho1@gmail.com"}
]
keywords = [
    "bigquery",
    "fastapi",
    "analytics",
    "ecommerce",
    "plotly-dash",
    "data-engineering",
    "machine-learning"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "google-cloud-bigquery>=3.13.0",
    "google-cloud-bigquery-storage>=2.21.0",
    "plotly>=5.17.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.0",
    "argon2-cffi>=23.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "argon2-cffi>=23.1.0",
    "types-python-jose>=1.8.0",  # ← ADICIONADO
    "types-passlib>=1.7.0",      # ← ADICIONADO
    "types-requests>=2.31.0",    # ← ADICIONADO
    "black>=23.9.0",
    "ruff>=0.0.292",
    "mypy>=1.5.0",
    "types-requests>=2.31.0",
    "pre-commit>=3.4.0",
    "ipython>=8.15.0",
]

dashboard = [
    "dash>=2.14.0",
    "dash-bootstrap-components>=1.4.0",
]

[project.urls]
Homepage = "https://github.com/henriquebotelhogomes/ecommerce-analytics"
Documentation = "https://github.com/henriquebotelhogomes/ecommerce-analytics#readme"
Repository = "https://github.com/henriquebotelhogomes/ecommerce-analytics.git"
Issues = "https://github.com/henriquebotelhogomes/ecommerce-analytics/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ecommerce_analytics"]

# ========== BLACK CONFIGURATION ==========
[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# ========== RUFF CONFIGURATION ==========
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "C",
    "B",
]
ignore = [
    "E501",    # Line too long (Black já cuida disso)
    "W191",    # Indentation contains tabs
    "B008",    # Do not perform function call in argument defaults (FastAPI pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["ecommerce_analytics"]
known-third-party = ["fastapi", "pydantic", "google", "plotly", "dash"]

# ========== MYPY CONFIGURATION ==========
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "google.cloud.*",
    "plotly.*",
    "dash.*",
    "pandas.*",
    "numpy.*",
]
ignore_missing_imports = true

# ========== PYTEST CONFIGURATION ==========
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short --cov=src/ecommerce_analytics --cov-report=html --cov-report=term-missing"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
    "bigquery: BigQuery integration tests",
]
asyncio_mode = "auto"

# ========== COVERAGE CONFIGURATION ==========
[tool.coverage.run]
source = ["src/ecommerce_analytics"]
omit = [
    "*/tests/*",
    "*/site-packages/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*Protocol",
    "@abstractmethod",
]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"